--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Project Vaayu - A YouTube Clone based on ReactJS. All Rights Reserved - KESHAV 2022."
+      content="notYouTube - Definitely Not a YouTube Clone based on ReactJS."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Project Vaayu | Blazee</title>
+    <title>notYouTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
